# REMstocks

./: .gitignore  CMakeLists.txt  README.md
include/: BotTelegram.h  Interface.h  JsonWorker.h  PostgresDB.h  PyLoader.h  TelegramSender.h  TelegramUser.h
py_scripts/: one_req_pars.py  pars_script.py  script_requests.py  script_selenium.py  test_read.py
res/: my_favourite_link.txt  products1.json  products2.json  result_512291448.json  result_512291450.json  result_512291451.json  result_test_db.txt  result_test_interface_start.txt  result_test_interface_start_2.txt  result_test_json_worker.txt  result_test_telegramuser.txt
src/: BotTelegram.cpp  Interface.cpp  JsonWorker.cpp  PostgresDB.cpp  PyLoader.cpp  Realize.cpp  TelegramSender.cpp  TelegramSender.h  TelegramUser.cpp  main.cpp
tests/: test_PostgresDB.cpp  test_TelegramUser.cpp  test_interface_start.cpp  test_interface_start_2.cpp  test_jsonworker.cpp
